syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.jzb.test.grpc.proto";
option java_outer_classname = "GreeterProto";
option objc_class_prefix = "HLW";

package greeter;

// protoc -I=. greeter.proto --js_out=import_style=commonjs,binary:./grpc-web --grpc-web_out=import_style=typescript,mode=grpcwebtext:./grpc-web
//import "validate/validate.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
